--- a/HYNewNest/Features(主代码)/ElectronComponent/View/CNElectionTypeSelectorView.xib
+++ b/HYNewNest/Features(主代码)/ElectronComponent/View/CNElectionTypeSelectorView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -22,7 +22,6 @@
                 <outletCollection property="hallBtnArray" destination="dM6-rt-wlu" id="NX8-eN-YXV"/>
                 <outletCollection property="hallBtnArray" destination="IKU-G7-7Zt" id="B19-PH-e5J"/>
                 <outletCollection property="hallBtnArray" destination="RwS-6y-ZXW" id="vtA-PQ-tiq"/>
-                <outletCollection property="hallBtnArray" destination="jxi-UD-RxR" id="Gwr-G3-Xj0"/>
                 <outletCollection property="typeBtnArray" destination="cXu-gW-zqx" id="yIN-UT-f0S"/>
                 <outletCollection property="typeBtnArray" destination="Gyn-o1-KhK" id="DP4-JO-hV5"/>
                 <outletCollection property="typeBtnArray" destination="Mfb-ex-vrB" id="11P-TZ-iM6"/>
@@ -172,13 +171,10 @@
                                                                 <action selector="hallAction:" destination="-1" eventType="touchUpInside" id="qgk-Q2-Hev"/>
                                                             </connections>
                                                         </button>
-                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jxi-UD-RxR" customClass="CNSelectBtn">
+                                                        <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jxi-UD-RxR">
                                                             <rect key="frame" x="272.5" y="0.0" width="81.5" height="30"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                                            <state key="normal" title="NT"/>
-                                                            <connections>
-                                                                <action selector="hallAction:" destination="-1" eventType="touchUpInside" id="cef-fW-Azm"/>
-                                                            </connections>
+                                                            <state key="normal" title=" "/>
                                                         </button>
                                                     </subviews>
                                                 </stackView>
@@ -511,13 +507,13 @@
                     </constraints>
                 </view>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="0bx-rG-ZxG"/>
             <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.80000000000000004" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="iWw-6O-s1l" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="5gY-od-R9a"/>
                 <constraint firstAttribute="bottom" secondItem="iWw-6O-s1l" secondAttribute="bottom" id="Vdi-Wj-HmU"/>
                 <constraint firstAttribute="trailing" secondItem="iWw-6O-s1l" secondAttribute="trailing" id="enh-fW-aor"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="0bx-rG-ZxG"/>
             <point key="canvasLocation" x="137.68115942028987" y="152.67857142857142"/>
         </view>
     </objects>
