--- a/HYNewNest/Features(主代码)/HomeComponent/View/CNUserInfoLoginView.xib
+++ b/HYNewNest/Features(主代码)/HomeComponent/View/CNUserInfoLoginView.xib
@@ -197,7 +197,7 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" id="bWe-Js-K1F">
-                    <rect key="frame" x="0.0" y="0.0" width="404" height="114"/>
+                    <rect key="frame" x="0.0" y="0.0" width="404" height="140"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Shape" translatesAutoresizingMaskIntoConstraints="NO" id="Sim-dp-tCw">
@@ -208,7 +208,7 @@
                             </constraints>
                         </imageView>
                         <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MTb-7Q-XWA">
-                            <rect key="frame" x="53.5" y="56" width="141" height="38"/>
+                            <rect key="frame" x="53.5" y="82" width="141" height="38"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="141" id="9dC-VJ-nV0"/>
                                 <constraint firstAttribute="height" constant="38" id="daB-B5-A8Z"/>
@@ -225,7 +225,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7ua-jq-xoI">
-                            <rect key="frame" x="209.5" y="56" width="141" height="38"/>
+                            <rect key="frame" x="209.5" y="82" width="141" height="38"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="38" id="h5N-7C-t29"/>
                             </constraints>
@@ -241,14 +241,14 @@
                             </connections>
                         </button>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon" translatesAutoresizingMaskIntoConstraints="NO" id="Y6N-AN-fHE">
-                            <rect key="frame" x="68.5" y="-7.5" width="42" height="42"/>
+                            <rect key="frame" x="68.5" y="18.5" width="42" height="42"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="42" id="vq5-BM-Pee"/>
                                 <constraint firstAttribute="width" constant="42" id="xcA-N5-wzC"/>
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="亲爱的用户，币游国际欢迎您" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tSp-Jm-n9v">
-                            <rect key="frame" x="121.5" y="3.5" width="213" height="20"/>
+                            <rect key="frame" x="121.5" y="29.5" width="213" height="20"/>
                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                             <color key="textColor" red="0.098039215690000001" green="0.80784313730000001" blue="0.80784313730000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
@@ -280,11 +280,15 @@
             </subviews>
             <color key="backgroundColor" red="0.12941176470588234" green="0.12941176470588234" blue="0.21568627450980393" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="bWe-Js-K1F" firstAttribute="leading" secondItem="3hg-uc-S9h" secondAttribute="leading" id="H8t-1H-FKQ"/>
                 <constraint firstAttribute="trailing" secondItem="3hg-uc-S9h" secondAttribute="trailing" id="IZV-jR-gXP"/>
                 <constraint firstItem="3hg-uc-S9h" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="JAZ-uS-iFJ"/>
                 <constraint firstItem="gdW-q9-I6I" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="48" id="OfA-yq-z2h"/>
                 <constraint firstAttribute="bottom" secondItem="gdW-q9-I6I" secondAttribute="bottom" constant="25" id="R90-5z-cBe"/>
                 <constraint firstAttribute="bottom" secondItem="3hg-uc-S9h" secondAttribute="bottom" id="az5-bs-yec"/>
+                <constraint firstItem="bWe-Js-K1F" firstAttribute="top" secondItem="3hg-uc-S9h" secondAttribute="top" id="o3k-dU-x9k"/>
+                <constraint firstItem="bWe-Js-K1F" firstAttribute="trailing" secondItem="3hg-uc-S9h" secondAttribute="trailing" id="quH-6W-hn2"/>
+                <constraint firstItem="bWe-Js-K1F" firstAttribute="bottom" secondItem="3hg-uc-S9h" secondAttribute="bottom" id="vIF-De-BpX"/>
                 <constraint firstItem="3hg-uc-S9h" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="wPz-U7-XYj"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
