--- a/HYNewNest/Utility(工具类)/BTTAnimationPopView/RedPacketsRainView.xib
+++ b/HYNewNest/Utility(工具类)/BTTAnimationPopView/RedPacketsRainView.xib
@@ -15,39 +15,84 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="抢红包啦" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QQk-D3-WLJ">
-                    <rect key="frame" x="150.5" y="84" width="113.5" height="33.5"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="28"/>
-                    <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c8d-eI-hg0">
-                    <rect key="frame" x="195" y="127.5" width="24" height="48"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="40"/>
-                    <color key="textColor" systemColor="systemOrangeColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iIQ-1T-EZ8">
-                    <rect key="frame" x="356" y="64" width="38" height="38"/>
-                    <state key="normal" image="ic_new_year_pop_close_btn"/>
-                    <connections>
-                        <action selector="closeBtnAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="Nxa-bR-Ku7"/>
-                    </connections>
-                </button>
+                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lLp-Md-ud5">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                    <subviews>
+                        <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5lj-Xy-MVW">
+                            <rect key="frame" x="20" y="50" width="37" height="34"/>
+                            <state key="normal" title="返回"/>
+                            <connections>
+                                <action selector="showCardsBonus:" destination="iN0-l3-epB" eventType="touchUpInside" id="DLK-wl-3lB"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemPinkColor"/>
+                    <constraints>
+                        <constraint firstItem="5lj-Xy-MVW" firstAttribute="leading" secondItem="lLp-Md-ud5" secondAttribute="leading" constant="20" id="Jeo-ei-WVy"/>
+                    </constraints>
+                </view>
+                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5j4-AX-VrT">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="抢红包啦" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QQk-D3-WLJ">
+                            <rect key="frame" x="150.5" y="80" width="113.5" height="33.5"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                            <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c8d-eI-hg0">
+                            <rect key="frame" x="195" y="163.5" width="24" height="48"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                            <color key="textColor" systemColor="systemOrangeColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iIQ-1T-EZ8">
+                            <rect key="frame" x="326" y="50" width="38" height="38"/>
+                            <state key="normal" image="ic_new_year_pop_close_btn"/>
+                            <connections>
+                                <action selector="closeBtnAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="Nxa-bR-Ku7"/>
+                            </connections>
+                        </button>
+                        <button hidden="YES" opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eqy-K3-5tk">
+                            <rect key="frame" x="20" y="50" width="92" height="34"/>
+                            <state key="normal" title="集福卡大奖"/>
+                            <connections>
+                                <action selector="showCardsBonus:" destination="iN0-l3-epB" eventType="touchUpInside" id="4aA-Yh-2p3"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstItem="c8d-eI-hg0" firstAttribute="centerX" secondItem="5j4-AX-VrT" secondAttribute="centerX" id="0eD-eu-5L9"/>
+                        <constraint firstItem="QQk-D3-WLJ" firstAttribute="top" secondItem="5j4-AX-VrT" secondAttribute="top" constant="80" id="6Wp-cW-qK6"/>
+                        <constraint firstAttribute="trailing" secondItem="iIQ-1T-EZ8" secondAttribute="trailing" constant="50" id="EJc-gd-ov0"/>
+                        <constraint firstItem="Eqy-K3-5tk" firstAttribute="top" secondItem="5j4-AX-VrT" secondAttribute="top" constant="50" id="Tmf-L7-ROC"/>
+                        <constraint firstItem="iIQ-1T-EZ8" firstAttribute="top" secondItem="5j4-AX-VrT" secondAttribute="top" constant="50" id="Z1Q-fr-bLD"/>
+                        <constraint firstItem="c8d-eI-hg0" firstAttribute="top" secondItem="QQk-D3-WLJ" secondAttribute="bottom" constant="50" id="bbQ-kX-A5X"/>
+                        <constraint firstItem="Eqy-K3-5tk" firstAttribute="leading" secondItem="5j4-AX-VrT" secondAttribute="leading" constant="20" id="ic4-6X-h9T"/>
+                        <constraint firstItem="QQk-D3-WLJ" firstAttribute="centerX" secondItem="5j4-AX-VrT" secondAttribute="centerX" id="ro8-ko-bEp"/>
+                    </constraints>
+                </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" white="0.0" alpha="0.14349870492290978" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="iIQ-1T-EZ8" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="20" id="0wc-c3-MOd"/>
-                <constraint firstItem="c8d-eI-hg0" firstAttribute="top" secondItem="QQk-D3-WLJ" secondAttribute="bottom" constant="10" id="9QK-LK-yFQ"/>
-                <constraint firstItem="QQk-D3-WLJ" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Qqi-Iz-wpw"/>
-                <constraint firstItem="QQk-D3-WLJ" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="40" id="e9L-Ji-v0E"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="iIQ-1T-EZ8" secondAttribute="trailing" constant="20" id="rGa-Nn-2LK"/>
-                <constraint firstItem="c8d-eI-hg0" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="vUy-s7-uZz"/>
+                <constraint firstItem="5lj-Xy-MVW" firstAttribute="top" secondItem="Eqy-K3-5tk" secondAttribute="top" id="0rz-Hg-j5y"/>
+                <constraint firstItem="lLp-Md-ud5" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Cdf-w0-Lzx"/>
+                <constraint firstAttribute="bottom" secondItem="5j4-AX-VrT" secondAttribute="bottom" id="PLC-AR-vDS"/>
+                <constraint firstAttribute="bottom" secondItem="lLp-Md-ud5" secondAttribute="bottom" id="U8c-hX-IG9"/>
+                <constraint firstItem="5j4-AX-VrT" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="W0L-oc-tIj"/>
+                <constraint firstItem="lLp-Md-ud5" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="YyI-dt-NFZ"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="5j4-AX-VrT" secondAttribute="trailing" id="auK-Cv-kj9"/>
+                <constraint firstItem="5j4-AX-VrT" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="bPP-pl-vEA"/>
+                <constraint firstAttribute="trailing" secondItem="lLp-Md-ud5" secondAttribute="trailing" id="bdj-Yf-2II"/>
             </constraints>
             <connections>
+                <outlet property="cardsBonusView" destination="lLp-Md-ud5" id="MFh-Rc-dIl"/>
                 <outlet property="closeButton" destination="iIQ-1T-EZ8" id="bq9-Fl-P0L"/>
                 <outlet property="countdownLab" destination="c8d-eI-hg0" id="paM-6t-mST"/>
+                <outlet property="redPocketsRainView" destination="5j4-AX-VrT" id="t8Q-i3-s8u"/>
+                <outlet property="showCardsButton" destination="Eqy-K3-5tk" id="6VY-QL-mwo"/>
                 <outlet property="titleLabel" destination="QQk-D3-WLJ" id="M9e-35-Pyx"/>
             </connections>
             <point key="canvasLocation" x="131.8840579710145" y="130.58035714285714"/>
@@ -57,6 +102,9 @@
         <image name="ic_new_year_pop_close_btn" width="38" height="38"/>
         <systemColor name="systemOrangeColor">
             <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
